# MES-Gesture-Hand-Game

./: CMakeLists.txt  LICENSE  README.md  prj.conf  sample.yaml  thingy53_nrf5340_cpuapp_ns.overlay
src/: button.c  button.h  buzzer.c  buzzer.h  imu.c  imu.h  led.c  led.h  main.c  state_machine.c  state_machine.h  utils.h
